# TGRAG

./: .gitignore  .pre-commit-config.yaml  README.md  data_exploration.py  load_data.py  pyproject.toml
bash_scripts/: README.MD  end-to-end.sh  get_data.sh  load_pipeline.sh  run.sh  run_link_to_graph.sh  run_wat_to_link.sh  test.sh
bash_scripts/CC-Crawls/: CC-2025.txt  test.txt
configs/gnn_rni/: base.yaml
experiments/: gnn_experiment.py
external_run/: run_external_scripts.py
scripts/: basic_stat_visualizations.py  data_exploration.py  get_data.py  load_data.py  load_pipeline.sh  merge_pipeline.sh  run.sh  visualize_graph_neo4j.py
scripts/cc-scripts/: hostlinks_to_graph.py  iana_tld.py  sparkcc.py  wat_extract_links.py
test/test_construct/: test_article_level.py  test_contains_domain.py  test_matching.py  test_subnetwork_construction.py
test/test_encoders/: test_rni_encoding.py  test_time_encoder.py
test/test_utils/: test_args.py  test_data_loading.py
tgrag/: data_exploration.py
tgrag/cc-scripts/: hostlinks_to_graph.py  iana_tld.py  json_importer.py  sparkcc.py  wat_extract_links.py
tgrag/construct_graph_scripts/: article_merge.py  load_labels.py  main.py  process_compressed_text.py  subnetwork_construct.py  temporal_merge.py
tgrag/construct_graph_scripts/graph_utils/: matching.py
tgrag/dataset/: temporal_dataset.py
tgrag/encoders/: encoder.py  rni_encoding.py  time_encoder.py
tgrag/experiments/: gnn_experiment.py  main.py
tgrag/gnn/: GAT.py  SAGE.py  gCon.py
tgrag/utils/: args.py  article_merger.py  data_loading.py  logger.py  matching.py  merger.py  path.py  plot.py  stats.py  text_merger.py
utils/: load_csv_edges_vertices.py  load_data.py  load_labels.py  process_compressed_text.py  temporal_merge.py
