[project]
name = "tgrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "neo4j-viz>=0.2.6",
    "networkx>=3.2.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "pyqt6>=6.9.0",
]


